--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,14 +37,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     /*expresso dependency*/
-    androidTestCompile 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.firebase:firebase-jobdispatcher:0.5.0'
-    // Instrumentation dependencies use androidTestCompile
-    // (as opposed to testCompile for local unit tests run in the JVM)
-    //androidTestCompile 'com.android.support.test:rules:0.5'*/
 
     /*Firebase dependency*/
     implementation 'com.google.firebase:firebase-core:16.0.1'
@@ -52,26 +49,21 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.firebase:firebase-firestore:17.0.2'
-
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
-
-
     implementation 'com.google.code.gson:gson:2.8.0'
-    ///*androidTestCompile 'junit:junit:4.12'
-    /*androidTestCompile 'com.android.support:support-annotations:25.0.1'
-    androidTestCompile 'com.android.support.test:runner:0.5'*/
-    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
+
+    //android architectural dependency
     implementation "android.arch.persistence.room:runtime:1.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
-
     implementation "android.arch.lifecycle:extensions:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
 
+
+    //generaated espresso dependency
     implementation 'com.android.support:multidex:1.0.3'
-    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'design'
